StatixSettings: Smart Pixels [3/3]
Change-Id: I55775e02e849ad5db5b1187be0ca77b7c09f1081

--- a/app_override/StatixSettings/res/xml/battery_saver_settings.xml
+++ b/app_override/StatixSettings/res/xml/battery_saver_settings.xml
@@ -26,6 +26,12 @@
         settings:controller="com.android.settings.fuelgauge.batterysaver.BatterySaverButtonPreferenceController"/>
 
     <Preference
+        android:key="smart_pixels"
+        android:title="@string/smart_pixels_title"
+        android:summary="@string/smart_pixels_summary"
+        android:fragment="com.statix.android.settings.fuelgauge.batterysaver.SmartPixels" />
+
+    <Preference
         android:order="50"
         android:key="battery_saver_schedule"
         android:fragment="com.android.settings.fuelgauge.batterysaver.BatterySaverScheduleSettings"
