--- a/app_override/StatixSystemUI/res/values/config.xml
+++ b/app_override/StatixSystemUI/res/values/config.xml
@@ -8,4 +8,9 @@
         internet,bt,flashlight,dnd,alarm,airplane,controls,wallet,rotation,battery,cast,screenrecord,mictoggle,cameratoggle,location,hotspot,inversion,saver,dark,work,night,reverse,reduce_brightness,powershare,caffeine
     </string>
 
+    <!-- The location of the device's alert slider:
+         0: Left side
+         1: Right side -->
+    <integer name="config_alertSliderLocation">0</integer>
+
 </resources>
