--- a/packages/overlays/accent/AccentColorRedOverlay/res/values/colors_device_defaults.xml
+++ b/packages/overlays/accent/AccentColorRedOverlay/res/values/colors_device_defaults.xml
@@ -17,6 +17,6 @@
  */
 -->
 <resources>
-    <color name="accent_device_default_light">#bb1420</color>
-    <color name="accent_device_default_dark">#bb6969</color>
+    <color name="accent_device_default_light">#ffeb0028</color>
+    <color name="accent_device_default_dark">#ffeb0028</color>
 </resources>
