--- a/app_override/StatixLauncher/res/values/config.xml
+++ b/app_override/StatixLauncher/res/values/config.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="wallpaper_picker_package" translatable="false">com.android.wallpaper</string>
+    <string name="local_colors_extraction_class" translatable="false">com.statix.launcher.ThemedLocalColorExtractor</string>
 </resources>
