--- a/app_override/StatixSystemUI/res/values/flags.xml
+++ b/app_override/StatixSystemUI/res/values/flags.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="flag_monet">true</bool>
+    <bool name="flag_conversations">true</bool>
+    <bool name="flag_charging_ripple">true</bool>
 </resources>
