--- a/app_override/StatixSystemUI/res/values/config.xml
+++ b/app_override/StatixSystemUI/res/values/config.xml
@@ -2,4 +2,10 @@
 <resources>
     <!-- SystemUIFactory component -->
     <string name="config_systemUIFactoryComponent" translatable="false">com.statix.android.systemui.SystemUIStatixFactory</string>
+
+    <!-- Tiles native to Statix System UI. Order should match "quick_settings_tiles_default" -->
+    <string name="quick_settings_tiles_stock" translatable="false">
+        internet,bt,flashlight,dnd,alarm,airplane,controls,wallet,rotation,battery,cast,screenrecord,mictoggle,cameratoggle,location,hotspot,inversion,saver,dark,work,night,reverse,reduce_brightness,powershare
+    </string>
+
 </resources>
