--- a/app_override/StatixLauncher/res/xml/launcher_preferences.xml
+++ b/app_override/StatixLauncher/res/xml/launcher_preferences.xml
@@ -58,6 +58,16 @@
         launcher:logIdOff="616" />
 
     <androidx.preference.PreferenceScreen
+        android:key="pref_suggestions"
+        android:persistent="false"
+        android:title="@string/pref_suggestions_title"
+        android:summary="@string/pref_suggestions_summary">
+
+        <intent android:action="android.settings.ACTION_CONTENT_SUGGESTIONS_SETTINGS" />
+
+    </androidx.preference.PreferenceScreen>
+
+    <androidx.preference.PreferenceScreen
         android:key="pref_developer_options"
         android:persistent="false"
         android:title="Developer Options"
