--- a/app_override/StatixSettings/res/xml/gestures.xml
+++ b/app_override/StatixSettings/res/xml/gestures.xml
@@ -40,6 +40,12 @@
         settings:controller="com.android.settings.gestures.SwipeToNotificationPreferenceController" />
 
     <Preference
+        android:key="swipe_to_screenshot_summary"
+        android:title="@string/swipe_to_screenshot_title"
+        android:fragment="com.statix.android.settings.gestures.SwipeToScreenshotGestureSettings"
+        settings:controller="com.statix.android.settings.gestures.SwipeToScreenshotPreferenceController" />
+
+    <Preference
         android:key="gesture_double_tap_power_input_summary"
         android:title="@string/double_tap_power_for_camera_title"
         android:fragment="com.android.settings.gestures.DoubleTapPowerSettings"
