StatixSystemUI: implement StatusBar stub
Change-Id: I6bbd89473db868e180ee51b5a84fdfb542227d6f

--- a/app_override/StatixSystemUI/res/values/config.xml
+++ b/app_override/StatixSystemUI/res/values/config.xml
@@ -3,6 +3,9 @@
     <!-- SystemUIFactory component -->
     <string name="config_systemUIFactoryComponent" translatable="false">com.statix.android.systemui.SystemUIStatixFactory</string>
 
+    <!-- Status bar component -->
+    <string name="config_statusBarComponent">com.statix.android.systemui.statusbar.phone.StatusBarStatix</string>
+
     <!-- SystemUI vendor service, used in config_systemUIServiceComponents. -->
     <string name="config_systemUIVendorServiceComponent">com.statix.android.systemui.StatixServices</string>
 
