--- a/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
+++ b/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
@@ -48,5 +48,8 @@
             Microphone: PHONE_CALL_MICROPHONE
         -->
         <item>privacy/discrete_history_ops_cslist=0,109,1,108,26,101,27,102,106,100,8,9,6,7,4,5,62,59,60,90,77,111,114,112,51,65,13,6,7,52,53,54,69,74,79,113,20,16,14,19,18,57</item>
+
+        <!-- Now Playing -->
+        <item>device_personalization_services/NowPlaying__ambient_music_index_manifest_17_09_02=201:https://storage.googleapis.com/music-iq-db/updatable_ytm_db/20220213-030023/manifest.json</item>
     </string-array>
 </resources>
