StatixSettings: create a Smart Pixels preference controller
Change-Id: If8d14438aa6644038a623392a6a507b43e26e2fa
Reviewed-on: https://review.statixos.com/c/android_vendor_statix/+/7009
Tested-by: Anay Wadhera <anay1018@gmail.com>
Reviewed-by: Anay Wadhera <anay1018@gmail.com>
Reviewed-on: https://review.statixos.com/c/android_vendor_statix/+/7367

--- a/app_override/StatixSettings/res/xml/battery_saver_settings.xml
+++ b/app_override/StatixSettings/res/xml/battery_saver_settings.xml
@@ -29,7 +29,8 @@
         android:key="smart_pixels"
         android:title="@string/smart_pixels_title"
         android:summary="@string/smart_pixels_summary"
-        android:fragment="com.statix.android.settings.fuelgauge.batterysaver.SmartPixels" />
+        android:fragment="com.statix.android.settings.fuelgauge.batterysaver.SmartPixels"
+        settings:controller="com.statix.android.settings.fuelgauge.batterysaver.SmartPixelsPreferenceController" />
 
     <Preference
         android:order="50"
