--- a/app_override/StatixSettings/res/values/arrays.xml
+++ b/app_override/StatixSettings/res/values/arrays.xml
@@ -8,5 +8,10 @@
     <string-array name="allowlist_hide_background_in_battery_usage">
         <item>com.google.android.GoogleCamera</item>
     </string-array>
+    <string-array name="allowlist_hide_entry_in_battery_usage">
+        <item>com.google.android.gms.persistent</item>
+    </string-array>
+    <string-array name="allowlist_hide_summary_in_battery_usage">
+    </string-array>
 
 </resources>
