statix: Default to automatic dark mode
Sticking to light mode as default has it's fair share of problems
as such is defaulting to dark mode. Stick with automatic system
color scheme handling.

Change-Id: Ifc3b953aabad8b97338c4a0cec229eaa10a29f7a

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -119,4 +119,12 @@
 
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_enableSmartPixels">false</bool>
+
+    <!-- Control the default night mode to use when there is no other mode override set.
+     One of the following values (see UiModeManager.java):
+         0 - MODE_NIGHT_AUTO
+         1 - MODE_NIGHT_NO
+         2 - MODE_NIGHT_YES
+    -->
+    <integer name="config_defaultNightMode">0</integer>
 </resources>
