statix: fonts: Update Inter to 3.19 and improve font weights
Utilise all the avaiable font weights.
Use bold for headlines.

Signed-off-by: Vaisakh Murali <mvaisakh@statixos.com>
Change-Id: Ic2cbe9aa04462c6886b9ac98e58f3d523942a4ac

--- a/packages/overlays/font/FontInterOverlay/res/values/config.xml
+++ b/packages/overlays/font/FontInterOverlay/res/values/config.xml
@@ -22,6 +22,6 @@
 
     <!-- Name of a font family to use for headlines. If empty, falls back to platform default -->
     <string name="config_headlineFontFamily">inter</string>
-    <string name="config_headlineFontFamilyMedium">inter-medium</string>
+    <string name="config_headlineFontFamilyMedium">inter-bold</string>
 </resources>
 
