--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -127,4 +127,7 @@
          2 - MODE_NIGHT_YES
     -->
     <integer name="config_defaultNightMode">0</integer>
+
+    <!-- Fingerprint from a certified device -->
+    <string name="config_certifiedFingerprint" translatable="false">google/raven/raven:13/TP1A.220905.004/8927612:user/release-keys</string>
 </resources>
