--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -140,5 +140,6 @@
     <integer name="config_defaultNightMode">0</integer>
 
     <!-- Fingerprint from a certified device -->
-    <string name="config_certifiedFingerprint" translatable="false">google/raven/raven:13/TP1A.221005.002/9012097:user/release-keys</string>
+    <string name="config_certifiedFingerprint" translatable="false">google/angler/angler:6.0/MDB08L/2343525:user/release-keys</string>
+    <string name="config_certifiedModel" translatable="false">Nexus 6P</string>
 </resources>
