--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -136,5 +136,5 @@
     <integer name="config_defaultNightMode">0</integer>
 
     <!-- Fingerprint from a certified device -->
-    <string name="config_certifiedFingerprint" translatable="false">google/raven/raven:13/TP1A.221005.002/9012097:user/release-keys</string>
+    <string name="config_certifiedFingerprint" translatable="false">google/cheetah/cheetah:13/TD1A.221105.001/9104446:user/release-keys</string>
 </resources>
