--- a/packages/overlays/font/FontDMSansOverlay/res/values/config.xml
+++ b/packages/overlays/font/FontDMSansOverlay/res/values/config.xml
@@ -23,5 +23,7 @@
     <!-- Name of a font family to use for headlines. If empty, falls back to platform default -->
     <string name="config_headlineFontFamily">dmsans</string>
     <string name="config_headlineFontFamilyMedium">dmsans-medium</string>
-</resources>
 
+    <!-- Name of the font family to use in the default lockscreen clock -->
+    <string name="config_clockFontFamily" translatable="false">dmsans</string>
+</resources>
