statix: Enable smart actions in the clipboard overlay
Thanks to Mishaal [1] for finding how to enable this.

[1]: https://twitter.com/MishaalRahman/status/1605252760508801024?s=19

Change-Id: If5cb5d4570a93e1486228c306970c173857ffe37

--- a/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
+++ b/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
@@ -33,7 +33,10 @@
         <item>privacy/discrete_history_cutoff_millis=604800000</item>
 
         <!-- Use new privacy indicators for location -->
-        <item>privacy/location_indicators_enabled=true</item>
+	<item>privacy/location_indicators_enabled=true</item>
+
+	<!-- Enable smart actions in the clipboard overlay -->
+	<item>systemui/clipboard_overlay_show_actions=true</item>
 
         <!--
             Keep track of more app ops for privacy dashboard display.
