--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -48,9 +48,12 @@
      -->
     <string name="config_defaultWellbeingPackage">com.google.android.apps.wellbeing</string>
 
-   <!-- Make the gesture options show up -->
+    <!-- Make the gesture options show up -->
    <bool name="config_swipe_up_gesture_setting_available">true</bool>
-   
+
+    <!-- Config for whether Safety Protection is enabled. -->
+   <bool name="config_safetyProtectionEnabled">true</bool>
+
     <!-- Amount of time in ms the user needs to press the relevant keys to trigger the
          screenshot chord -->
     <integer name="config_screenshotChordKeyTimeout">1</integer>
