SystemUI: flags: Enable new wallpaper picker UI
* works fine with google wallpaper picker also

Change-Id: Ica0b0eb19645c344a606ad92ddcc1d66fe554383
Signed-off-by: aswin7469 <aswinas@pixysos.com>

* Adapt to SystemUIFlagFlipper

Change-Id: I94b8e038e5018851e244135b73b29952f8fc21a8
Signed-off-by: someone5678 <nemui3353@gmail.com>

--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -29,5 +29,6 @@
         <item>enable_font_scaling_tile=true</item>
         <item>lockscreen_custom_clocks=true</item>
         <item>media_explicit_indicator=true</item>
+        <item>revamped_wallpaper_ui=true</item>
     </string-array>
 </resources>
