statix: Enable session-based media actions for all apps
This is required to enable the new play/pause,
previous and next track buttons in QS media player
introduced in A13. By default, its only enabled for
apps that target API 33:

https://android.googlesource.com/platform/frameworks/base/+/85dddfc3c6d77105eec3e34099ee52928db7cb4a

Test: Spotify, Telegram, Retro Music
[ghostrider-reborn: updated for qpr1 and fixed a merged derp]
[LeddaZ: Adapted to SystemUIFlagFlipper]
Change-Id: I3c3e071c6e39e748777b3fbec97c5182ad327acc
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Reviewed-on: https://review.statixos.com/c/android_vendor_statix/+/10795
Tested-by: Leonardo Ledda <leonardoledda@gmail.com>
Reviewed-by: Anay Wadhera <anay1018@gmail.com>

--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -17,5 +17,6 @@
 <resources>
     <string-array name="flags">
         <item>216=true</item>
+        <item>901=true</item>
     </string-array>
 </resources>
