--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -153,4 +153,8 @@
         <item>"/system/bin/surfaceflinger"</item>
         <item>"/system_ext/priv-app/StatixSystemUI/StatixSystemUI.apk"</item>
     </string-array>
+
+    <!-- The type of the light sensor to be used by the display framework for things like
+     auto-brightness. If unset, then it just gets the default sensor of type TYPE_LIGHT. -->
+    <string name="config_displayLightSensorType" translatable="false">android.sensor.light</string>
 </resources>
