SystemUI: flags: Enable media player wave/shimmering effects
as per : https://t.me/google_nws/3036

LeddaZ: Adapt to SystemUIFlagFlipper

Change-Id: I6136d3722b30d953b4cb65871c6b53c711574d05
Signed-off-by: aswin7469 <aswinas@pixysos.com>
Signed-off-by: Leonardo Ledda <leonardoledda@gmail.com>
Reviewed-on: https://review.statixos.com/c/android_vendor_statix/+/10796
Reviewed-by: Anay Wadhera <anay1018@gmail.com>
Tested-by: Anay Wadhera <anay1018@gmail.com>

--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -18,5 +18,7 @@
     <string-array name="flags">
         <item>216=true</item>
         <item>901=true</item>
+        <item>907=true</item>
+        <item>909=true</item>
     </string-array>
 </resources>
