statix: Update to cheetah May 2023 FP
Change-Id: I1f53ee00d19c2f4b526caa2f9ba21ac7dcfa5973
Reviewed-on: https://review.statixos.com/c/android_vendor_statix/+/11053
Reviewed-by: Sourajit Karmakar <sourajitk@statixos.com>
Tested-by: Sourajit Karmakar <sourajitk@statixos.com>

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -142,7 +142,7 @@
     <bool name="config_enableQrCodeScannerOnLockScreen">true</bool>
 
     <!-- Fingerprint from a certified device -->
-    <string name="config_certifiedFingerprint" translatable="false">google/cheetah/cheetah:13/TQ2A.230405.003.E1/9802792:user/release-keys</string>
+    <string name="config_certifiedFingerprint" translatable="false">google/cheetah/cheetah:13/TQ2A.230505.002/9891397:user/release-keys</string>
 
     <!-- Default list of files pinned by the Pinner Service -->
     <string-array translatable="false" name="config_defaultPinnerServiceFiles">
