[DNM]statix: Enable a bunch of flags
Change-Id: Ie981ff49f5cd104db18513a86f0dba535635dabe

--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -20,5 +20,16 @@
         <item>901=true</item>
         <item>907=true</item>
         <item>909=true</item>
+        <item>265892345=true</item>
+        <item>700=true</item>
+        <item>510=true</item>
+        <item>606=true</item>
+        <item>609=true</item>
+        <item>229=true</item>
+        <item>227=true</item>
+        <item>224=true</item>
+        <item>222=true</item>
+        <item>221=true</item>
+        <item>207=true</item>
     </string-array>
 </resources>
