SystemUI: flags: Enable lockscreen clock customisation
* clock styles arent available as we dont have plugin
* but font customisation and colors are available now [https://t.me/aswinaskurup/189]

Signed-off-by: aswin7469 <aswinas@pixysos.com>

* Adapt to SystemUIFlagFlipper

Change-Id: Id27cf81f88ce8a62d1851620a7de929602bf8ecc
Signed-off-by: someone5678 <nemui3353@gmail.com>

--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -27,5 +27,6 @@
         <item>biometrics_animation_revamp=true</item>
         <item>monochromatic=true</item>
         <item>enable_font_scaling_tile=true</item>
+        <item>lockscreen_custom_clocks=true</item>
     </string-array>
 </resources>
