--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -26,5 +26,6 @@
         <item>auto_pin_confirmation=true</item>
         <item>biometrics_animation_revamp=true</item>
         <item>monochromatic=true</item>
+        <item>enable_font_scaling_tile=true</item>
     </string-array>
 </resources>
