--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -27,5 +27,6 @@
         <item>biometrics_animation_revamp=true</item>
         <item>monochromatic=true</item>
         <item>enable_font_scaling_tile=true</item>
+        <item>media_explicit_indicator=true</item>
     </string-array>
 </resources>
