SystemUI: flags: Enable media explicit indicator
* https://twitter.com/MishaalRahman/status/1633620821733261314?s=19

Signed-off-by: aswin7469 <aswinas@pixysos.com>

* Adapt to SystemUIFlagFlipper

Change-Id: I4b0b71e1624f6caa8fa8d6e490c9daf568ce33d6
Signed-off-by: someone5678 <nemui3353@gmail.com>

--- a/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
+++ b/overlay/common/packages/apps/SystemUIFlagFlipper/res/values/config.xml
@@ -28,5 +28,6 @@
         <item>monochromatic=true</item>
         <item>enable_font_scaling_tile=true</item>
         <item>lockscreen_custom_clocks=true</item>
+        <item>media_explicit_indicator=true</item>
     </string-array>
 </resources>
